# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytfs"
version = "2.0.0"
description = "Pack files into AES-encrypted videos"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "imageio[ffmpeg]==2.34.0",
    "cryptography==42.0.5",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0"
]

[project.optional-dependencies]
test = ["pytest==8.0.2"]

[project.scripts]
ytfs = "ytfs:app"

[tool.setuptools]
py-modules = ["ytfs"]